<resources>
    <string name="app_name">Rock, Paper, Scissors</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="you">YOU</string>
    <string name="pc">PC</string>
    <string name="ready">Ready?</string>
    <string name="your_desc">Your choice</string>
    <string name="pc_desc">PC\'s choice of rock, paper, or scissors</string>
    <string name="score">0  -  0</string>
    <string name="reset">Reset</string>
</resources>
